# scrappy-do

./: Cargo.toml  LICENSE.md  README.md
examples/: simple.rs
scrappy_do-codegen/: Cargo.toml
scrappy_do-codegen/src/: lib.rs
src/: callback.rs  handler.rs  lib.rs  spider.rs  util.rs
