[package]
name = "scrappy_do"
version = "0.1.0"
authors = ["Matt Belle <matt.belle@blackboard.com>"]
edition = "2018"

[dependencies]
scrappy_do_codegen = { path = "./scrappy_do-codegen/" }
futures = "0.3"
reqwest = "^0.11"
tokio = { version = "1", features = ["sync", "rt"] }
url = "2"
scraper = "0.12"
thiserror = "1"
slog = "2.7"
slog-stdlog = "4.1"
pin-project = "1"
async-stream = "0.3"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}

[workspace]
members = ["scrappy_do-codegen"]
